Fix minor UI bug where the page jumps when the crawl status sticks to the top of the screen

--- a/frontend/src/sass/broken.scss
+++ b/frontend/src/sass/broken.scss
@@ -143,6 +143,14 @@ form {
   align-items: center;
 }
 
+#crawl-status-padding {
+  @extend %centered-info;
+  height: 57px;
+  background: none;
+  border: none;
+  animation: none;
+}
+
 #crawl-options {
   @extend %centered-info;
   border-color: $base-color;
